fixed contact form on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -364,5 +364,12 @@ a:hover {
   .avatarContainer {
     margin: 0rem 2rem;
   }
+  .cardContactBox{
+    width: 90%;
+    height: 100%;
+  }
+  .contactCardContainer {
+    top: 5%
+  }
 }
 
